--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Secure Notes App</title>
 <link rel="stylesheet" href="style.css">
+
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5247357983978191"
+     crossorigin="anonymous"></script>
+  
 </head>
 <body>
 
@@ -334,3 +339,4 @@ window.showLogin = () => {
 
 
 </html>
+
